--- a/NavBar-React-Router-master/src/component/MenuPrincipal/menu.css
+++ b/NavBar-React-Router-master/src/component/MenuPrincipal/menu.css
@@ -5,10 +5,11 @@ body
 }
 .container
 {
-  height: 100%;
+ 
     font-size: 15px;
     font-family: Georgia, 'Times New Roman', Times, serif;
-    margin-top: 10px;
+
+    width: 100%;
 }
 
 
