--- a/NavBar-React-Router-master/src/component/footer/footer.css
+++ b/NavBar-React-Router-master/src/component/footer/footer.css
@@ -1,5 +1,5 @@
 .footer-distributed {
-    background-color: #2d2a30;
+    background-color: #212529;
     box-sizing: border-box;
     width: 100%;
     text-align: left;
@@ -160,7 +160,7 @@
 }
 
 .footer-distributed {
-    background-color: #4a4a4a;
+    background-color: #212529;
 }
 
 .icon-button {
